# sifr

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  SECURITY.md
.claude/agents/: core-dev.md  orchestrator.md  security-reviewer.md  tui-dev.md
.github/workflows/: ci.yml  release.yml
.kilo/plans/: 1777127640724-silent-harbor.md
cli/: Cargo.toml
cli/src/: app.rs  config.rs  input.rs  main.rs  theme_bridge.rs
cli/src/ui/: entry_form.rs  entry_list.rs  mod.rs  status_bar.rs  unlock.rs  vault_picker.rs
core/: Cargo.toml  build.rs
core/src/: lib.rs  vault.rs
core/src/crypto/: mod.rs
core/src/db/: mod.rs  schema.sql
core/src/models/: mod.rs
core/src/theme/: mod.rs
core/tests/: vault_test.rs
core/themes/: catppuccin-mocha.toml  dracula.toml  gruvbox-dark.toml  nord.toml  solarized-dark.toml  solarized-light.toml  tokyo-night.toml
