[workspace]
members = [
    "core",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Artem Gromov"]
license = "MIT"
repository = "https://github.com/artem-gromov/sifr"

[workspace.dependencies]
# DB
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# Crypto
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"

# UniFFI (Swift/Kotlin bindings)
uniffi = "0.27"

# CLI / TUI
clap = { version = "4", features = ["derive"] }
ratatui = "0.27"
crossterm = "0.27"

# TOTP
totp-rs = "5"

# Clipboard
arboard = "3"
