[package]
name = "sifr"
description = "Sifr - cross-platform terminal password manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sifr"
path = "src/main.rs"

[dependencies]
sifr-core = { path = "../core" }
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
arboard.workspace = true
zeroize.workspace = true
rpassword = "7"
ratatui-textarea = "0.9.1"
tui-input = "0.15.3"
